--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,4 +11,5 @@
     .container
       = yield
     %script{:type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"}
-    
+    %script{:type => "text/javascript", :src => "js/jquery.form.js"}
+    %script{:type => "text/javascript", :src => "js/application.js"}    
