--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,6 +3,7 @@
   %head
     %title Shot
     %meta{ :content => "text/html; charset=utf-8" }
+    %link{ :href => "http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold&subset=latin", :rel => "stylesheet", :type => "text/css" }
     %link{ :rel => "stylesheet", :href => "/css/screen.css", :type => "text/css", :media => "screen, projection" }
     %link{ :rel => "stylesheet", :href => "/css/print.css", :type => "text/css", :media => "print" }
     /[if lt IE 8]
